# livekit-three

./: .gitignore  README.md
agent-ui/: .env.example  .gitignore  VERCEL.md  app-config.ts  package-lock.json  package.json  pnpm-lock.yaml
agent-ui/app/: layout.tsx  page.tsx
agent-ui/app/admin/: layout.tsx  page.tsx
agent-ui/app/admin/calls/: page.tsx
agent-ui/app/admin/calls/[id]/: page.tsx
agent-ui/app/admin/login/: page.tsx
agent-ui/app/admin/reports/: page.tsx
agent-ui/app/admin/settings/: page.tsx
agent-ui/app/api/admin/calls/: route.ts
agent-ui/app/api/admin/export/: route.ts
agent-ui/app/api/admin/login/: route.ts
agent-ui/app/api/admin/reports/: route.ts
agent-ui/app/api/admin/seed/: route.ts
agent-ui/app/api/admin/settings/: route.ts
agent-ui/app/api/token/: route.ts
agent-ui/app/login/: page.tsx
agent-ui/components/admin/: chart-card.tsx
agent-ui/components/admin/charts/: call-volume-chart.tsx  case-type-donut.tsx  conversion-chart.tsx  enquiries-chart.tsx  lead-quality-chart.tsx  urgency-chart.tsx
agent-ui/components/app/: post-call-analytics-view.tsx  view-controller.tsx  welcome-view.tsx
agent-ui/components/auth/: admin-auth-guard.tsx  auth-guard.tsx
agent-ui/lib/: auth.ts  db.ts  email.ts
python/: .env.example  .gitignore  README.md  agent.py  constants.py  pyproject.toml
python/core/clients/: __init__.py  backend.py  jambhala.py
python/core/database/: __init__.py
python/core/logging/: handler.py  logger.py
python/core/models/: __init__.py  models.py
python/core/services/: __init__.py  session.py
(+5 files in other folders)
