[project]
name = "livekit-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents>=1.5.1",
    "livekit-plugins-silero>=1.5.1",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-turn-detector>=1.5.1",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.5",
]
